# libtropic

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  lt_test_registry.c.inc  mkdocs.yml
.github/workflows/: clang_format_check.yml  coverage.yml  esp32_build_examples.yml  functional_mock_tests.yml  integration_tests.yml  linux_build_examples.yml  model_run_examples.yml  release_new_version.yml  run_examples.yml  stm32_build_examples.yml
TROPIC01_fw_update_files/boot_v_1_0_1/fw_v_1_0_0/: fw_CPU.h  fw_SPECT.h
TROPIC01_fw_update_files/boot_v_1_0_1/fw_v_1_0_1/: fw_CPU.h  fw_SPECT.h
TROPIC01_fw_update_files/boot_v_1_0_1/fw_v_2_0_0/: fw_CPU.h  fw_SPECT.h
TROPIC01_fw_update_files/boot_v_2_0_1/fw_v_1_0_0/: fw_CPU.h  fw_SPECT.h
TROPIC01_fw_update_files/boot_v_2_0_1/fw_v_1_0_1/: fw_CPU.h  fw_SPECT.h
TROPIC01_fw_update_files/boot_v_2_0_1/fw_v_2_0_0/: fw_CPU.h  fw_SPECT.h
cal/mbedtls_v4/: libtropic_mbedtls_v4.h  lt_mbedtls_v4_aesgcm.c  lt_mbedtls_v4_sha256.c
cal/openssl/: CMakeLists.txt  libtropic_openssl.h  lt_openssl_aesgcm.c  lt_openssl_common.c  lt_openssl_hmac_sha256.c  lt_openssl_sha256.c  lt_openssl_x25519.c
cal/trezor_crypto/: libtropic_trezor_crypto.h  lt_trezor_crypto_sha256.c
cal/wolfcrypt/: CMakeLists.txt  libtropic_wolfcrypt.h  lt_wolfcrypt_aesgcm.c  lt_wolfcrypt_common.c  lt_wolfcrypt_hmac_sha256.c  lt_wolfcrypt_sha256.c  lt_wolfcrypt_x25519.c
docs/: faq.md  index.md
docs/common/examples_descriptions/: fw_update.md  hello_world.md  identify_chip.md
docs/compatibility/: index.md
docs/compatibility/cfps/: index.md  mbedtls.md  openssl.md  trezor_crypto.md  wolfcrypt.md
docs/compatibility/host_platforms/: arduino.md  esp32.md  index.md  linux.md  posix.md  stm32.md
docs/doxygen/: mainpage.md
docs/for_contributors/: adding_cfp.md  adding_host_platform.md  building_documentation.md
docs/for_contributors/tests/: code_coverage.md  functional_mock_tests.md  functional_tests.md
docs/get_started/: debugging.md  index.md  libtropic_architecture.md  tropic01_fw.md
docs/get_started/examples/: index.md
docs/get_started/tutorials/: index.md
docs/other/: index.md  provisioning_data.md
docs/other/supported_cfps/: index.md  mbedtls.md  wolfcrypt.md
docs/other/supported_host_platforms/: esp32.md  esp_idf.md  index.md  posix.md  stm32.md
docs/other/tropic01_model/: index.md  provisioning_data.md
docs/reference/: debugging.md  default_pairing_keys.md  index.md  libtropic_architecture.md  logging.md  provisioning_data.md  tropic01_fw.md
docs/reference/integrating_libtropic/: index.md
docs/tutorials/: index.md
docs/tutorials/esp32/: fw_update.md  hello_world.md  identify_chip.md  index.md
docs/tutorials/model/: first_steps.md  hw_wallet.md  hw_wallet_example.md  index.md  macandd.md  macandd_example.md  separate_api.md
docs/tutorials/stm32/: fw_update.md  hello_world.md  identify_chip.md  index.md
examples/esp-idf/ESP32-DevKit-V4/fw_update/: CMakeLists.txt  sdkconfig
examples/esp-idf/ESP32-DevKit-V4/fw_update/components/libtropic/: CMakeLists.txt
examples/esp-idf/ESP32-DevKit-V4/fw_update/main/: CMakeLists.txt  main.c
examples/esp-idf/ESP32-DevKit-V4/hello_world/: CMakeLists.txt  sdkconfig.defaults
examples/esp-idf/ESP32-DevKit-V4/hello_world/components/libtropic/: CMakeLists.txt
examples/esp-idf/ESP32-DevKit-V4/hello_world/main/: main.c
examples/esp32/ESP32-DevKit-V4/hello_world/main/: CMakeLists.txt  main.c
examples/linux/TS1302_devkit/hello_world/: CMakeLists.txt  main.c
examples/linux/spi_devkit/identify_chip/: CMakeLists.txt  main.c
examples/linux/usb_devkit/hello_world/: CMakeLists.txt  main.c
examples/model/hello_world/: CMakeLists.txt  main.c
examples/model/hw_wallet/: CMakeLists.txt  main.c
examples/model/mac_and_destroy/: main.c
examples/model/separate_api/: CMakeLists.txt  main.c
examples/stm32/nucleo_f439zi/identify_chip/: CMakeLists.txt
examples/stm32/nucleo_f439zi/identify_chip/Inc/: syscalls.h
examples/stm32/nucleo_f439zi/identify_chip/Src/: main.c
hal/arduino/: libtropic_port_arduino.cpp
hal/esp-idf/: CMakeLists.txt  libtropic_port_esp_idf.c  libtropic_port_esp_idf.h
hal/linux/spi/: libtropic_port_linux_spi.c  (+1 more)
hal/mock/: libtropic_port_mock.c
include/: libtropic.h  libtropic_examples.h  libtropic_port.h
scripts/codechecker/: codechecker_build.sh
scripts/tropic01_model/: create_model_cfg.py  install_linux.sh  model_cfg.yml  model_runner.py
src/: libtropic.c  libtropic_l3.c  lt_crypto_common.h  lt_hkdf.c  lt_l1.c  lt_l1.h  lt_l3_api_structs.h  lt_sha256.h
tests/common/: lt_test_common.c
tests/functional/: lt_test_rev_param_check.c
tests/functional/linux/spi_devkit/: CMakeLists.txt  main.c
tests/functional/linux/usb_devkit/: CMakeLists.txt  download_deps.sh  main.c
tests/functional/model/: CMakeLists.txt  download_deps.sh  main.c
tests/functional/src/: CMakeLists.txt  libtropic_functional_tests.h  lt_test_ire_pairing_key_slots.c  lt_test_ire_write_i_config.c  lt_test_registry_template.c.inc  lt_test_rev_ecc_key_generate.c  lt_test_rev_ecc_key_store.c  lt_test_rev_ecdsa_sign.c  lt_test_rev_eddsa_sign.c  lt_test_rev_erase_r_config.c  lt_test_rev_get_info_req_app.c  lt_test_rev_get_info_req_bootloader.c  lt_test_rev_get_log_req.c  lt_test_rev_handshake_req.c  lt_test_rev_mac_and_destroy.c  lt_test_rev_mcounter.c  lt_test_rev_ping.c  lt_test_rev_r_mem.c  lt_test_rev_random_value_get.c  lt_test_rev_read_i_config.c  lt_test_rev_read_r_config.c  lt_test_rev_resend_req.c  lt_test_rev_sleep_req.c  lt_test_rev_startup_req.c  lt_test_rev_write_r_config.c
tests/functional/stm32/nucleo_f439zi/: CMakeLists.txt  run_test.sh
tests/functional/stm32/nucleo_f439zi/Inc/: stm32f4xx_hal_conf.h
tests/functional/stm32/nucleo_f439zi/Src/: main.c  stm32f4xx_hal_msp.c  syscalls.c
tests/functional_mock/: CMakeLists.txt  lt_functional_mock_tests.h  lt_test_mock_attrs.c  lt_test_mock_hardware_fail.c  lt_test_mock_invalid_in_crc.c  main.c.in
tests/functional_mock/helpers/: lt_mock_helpers.c  lt_mock_helpers.h
tropic01_model/: create_model_cfg.py  main.c
(+131 files in other folders)
